docs: add folder structure and contents

--- a/docs/Tutorials/demo/demo_2021_08_06.md
+++ b/docs/Tutorials/demo/demo_2021_08_06.md
@@ -1,4 +1,6 @@
-# MVP Demo
+# MVP Demo (Legacy)
+
+⚠ **This MVP demo is written before [F1 Distribution](https://github.com/tendermint/farming/issues/91) is implemented in farming module** ⚠
 
 ## Disclaimer
 
